--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </section>
 
     <section class="section-meals">
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img
@@ -135,7 +135,7 @@
         </li>
       </ul>
 
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img
@@ -179,14 +179,14 @@
         <h2>How it works &mdash; Simple as 1, 2, 3</h2>
       </div>
       <div class="row">
-        <div class="col span-1-of-2">
+        <div class="col span-1-of-2 steps-box">
           <img
             src="resources/img/app-iPhone.png"
             alt="Omnifood app on iPhone"
             class="app-screen"
           />
         </div>
-        <div class="col span-1-of-2">
+        <div class="col span-1-of-2 steps-box">
           <div class="works-step">
             <div>1</div>
             <p>
