Media queries work in progress

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="vendors/css/normalize.css" />
   <link rel="stylesheet" href="vendors/css/Grid.css" />
   <link rel="stylesheet" href="resources/css/style.css" />
+  <link rel="stylesheet" href="resources/css/queries.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" />
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet" />
   <title>Omnifood</title>
@@ -493,16 +494,16 @@
       <div class="col span-1-of-2">
         <ul class="social-links">
           <li><a href="#">
-              <ion-icon name="logo-twitter"></ion-icon>
+              <ion-icon name="logo-twitter" class="logo-twitter"></ion-icon>
             </a></li>
           <li><a href="#">
-              <ion-icon name="logo-facebook"></ion-icon>
+              <ion-icon name="logo-facebook" class="logo-facebook"></ion-icon>
             </a></li>
           <li><a href="#">
-              <ion-icon name="logo-googleplus"></ion-icon>
+              <ion-icon name="logo-googleplus" class="logo-googleplus"></ion-icon>
             </a></li>
           <li><a href="#">
-              <ion-icon name="logo-instagram"></ion-icon>
+              <ion-icon name="logo-instagram" class="logo-instagram"></ion-icon>
               </ion-icon>
             </a></li>
         </ul>
