--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <nav class="sticky">
+    <nav>
       <div class="row">
         <img src="resources/img/logo-white.png" alt="Omnifood Logo" class="logo" />
         <img src="resources/img/logo.png" alt="Omnifood Logo" class="logo-black" />
@@ -33,13 +33,13 @@
         Goodbye junk food. <br />
         Hello super healthy meals.
       </h1>
-      <a class="btn btn-full" href="#">I’m hungry </a>
+      <a class="btn btn-full js--scroll-to-plan" href="#">I’m hungry </a>
 
-      <a class="btn btn-ghost" href="#">Show me more</a>
+      <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>
     </div>
   </header>
 
-  <section class="section-features">
+  <section class="section-features js--section-features">
     <div class="row">
       <h2>Get food fast &mdash; not fast food</h2>
       <p class="long-copy">
@@ -295,7 +295,7 @@
     </div>
   </section>
 
-  <section class="section-plans">
+  <section class="section-plans js--section-plans">
     <div class="row">
       <h2>Start eating healthy today</h2>
       <div class="row">
@@ -517,8 +517,9 @@
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="resources/js/script.js"></script>
   <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+  <script src="vendors/js/jquery.waypoints.min.js"></script>
+  <script src="resources/js/script.js"></script>
 </body>
 
 </html>
