--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="vendors/css/Grid.css" />
   <link rel="stylesheet" href="resources/css/style.css" />
   <link rel="stylesheet" href="resources/css/queries.css" />
+  <link rel="stylesheet" href="vendors/css/animate.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" />
   <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet" />
   <title>Omnifood</title>
@@ -49,7 +50,7 @@
       </p>
     </div>
 
-    <div class="row">
+    <div class="row js--wp-1">
       <div class="col span-1-of-4 box">
         <ion-icon name="infinite" class="icon-big"></ion-icon>
         <h3>Up to 365 days/year</h3>
@@ -152,7 +153,7 @@
     </div>
     <div class="row">
       <div class="col span-1-of-2 steps-box">
-        <img src="resources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen" />
+        <img src="resources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen js--wp-2" />
       </div>
       <div class="col span-1-of-2 steps-box">
         <div class="works-step">
@@ -184,7 +185,7 @@
     </div>
   </section>
 
-  <section class="section-cities" id="cities">
+  <section class="section-cities js--wp-3" id="cities">
     <div class="row">
       <h2>We're currently in these cities</h2>
     </div>
@@ -300,7 +301,7 @@
       <h2>Start eating healthy today</h2>
       <div class="row">
         <div class="col span-1-of-3">
-          <div class="plan-box">
+          <div class="plan-box  js--wp-4">
             <div>
               <h3>Premium</h3>
               <p class="plan-price">399$ <span>per month</span></p>
@@ -335,7 +336,7 @@
         </div>
 
         <div class="col span-1-of-3">
-          <div class="plan-box">
+          <div class="plan-box js--wp-4">
             <div>
               <h3>Pro</h3>
               <p class="plan-price">149$ <span>per month</span></p>
@@ -372,7 +373,7 @@
         </div>
 
         <div class="col span-1-of-3">
-          <div class="plan-box">
+          <div class="plan-box js--wp-4">
             <div>
               <h3>Starter</h3>
               <p class="plan-price">19$ <span>per meal</span></p>
