--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <li><a href="#cities">Our Cities</a></li>
           <li><a href="#plans">Sign Up</a></li>
         </ul>
+        <a class="hamburger-menu"><i class="ion-navicon-round"></i></a>
       </div>
     </nav>
     <div class="hero-text-box">
